--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,2 @@
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.*)$ $1.html
+RewriteEngine On
+RewriteRule ^about$ about.html [L]
